[project]
name = "my-fleet-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fleet-deepagents-export>=0.0.1",
    "langgraph>=1.0.2",
    "langgraph-cli[inmem]>=0.1.60",
    "langgraph-sdk>=0.1.60",
    "langchain-anthropic>=1.0.0",
    "langchain-openai>=1.0.0",
    "langchain-google-genai>=3.0.0",
]
