[project]
name = "my-fleet-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fleet-deepagent-export @ git+https://github.com/langchain-ai/fleet-deepagent-export.git",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "langgraph-sdk>=0.1.60",
    "langchain-anthropic>=1.4.8",
    "langchain-openai>=1.3.3",
    "langchain-google-genai>=4.2.6",
]
